add header block elements

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -4,9 +4,11 @@
     <title>My First Webpage</title>
 </head>
 <body>
+  <h1>My First Webpage</h1>
+  <h2>Written stpe by step</h2>
   <p->Hello, world!</p->
- <p> Welcome to my first webpage!</p>
- <p>Tags work!</p>
+  <p> Welcome to my first webpage!</p>
+  <p>Tags work!</p>
 
 </body>
 </html>
