--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -9,6 +9,13 @@
   <p->Hello, world!</p->
   <p> Welcome to my first webpage!</p>
   <p>Tags work!</p>
+  <p>Here are some of the things I'm learning:</p>
+  <ol>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JavaScript</li>
+    <li>And alot more!</li>
+  </ol>
 
 </body>
 </html>
