--- a/index.html
+++ b/index.html
@@ -45,5 +45,6 @@
   </ol>
 
   <p>Peep this link for more of my hobbies: <a href="my-favourite-things.html">Click here...</a></p>
+  <p>This website is Live through Github Pages Deployment.</p>
 </body>
 </html>
